--- a/frontend/src/css/UserHomepage.css
+++ b/frontend/src/css/UserHomepage.css
@@ -28,7 +28,7 @@
   position: relative;
 background-color: #f9f9f9; /* fallback background */
 
-h1 {
+.userh1 {
   text-align: center;
   margin: 35px 0;
   color: #916848;
