--- a/frontend/src/css/UserHomepage.css
+++ b/frontend/src/css/UserHomepage.css
@@ -11,6 +11,7 @@
   background: linear-gradient(135deg, #f5efea, #ffffff);
   color: #333;
   box-sizing: border-box;
+  padding-top: 45px;
 }
 
 .section {
